[project]
name = "abc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0,<1.15.0",
    "fastapi>=0.104.0,<0.116.0",
    "numpy>=2.3.1",
    "pydantic>=2.8.0,<2.11.0",
    "pydantic-settings>=2.4.0,<2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.20,<2.1.0",
    "uvicorn[standard]>=0.24.0,<0.33.0",
]
